compiler/testData/diagnostics/tests/generics/tpAsReified/InType.kt
class C<<!REIFIED_TYPE_PARAMETER_NO_INLINE!>reified<!> T>

fun <A> main(<!UNUSED_PARAMETER!>p1<!>: C<A>, <!UNUSED_PARAMETER!>p2<!>: C<Int>) {
}